--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
                     <h2 class="font-bold text-dark text-3xl mb-4">Terdiri dari</h2>
                     <p class="font-medium text-md text-second"> Wali kelas = Zikra Warni
                     <h2 class="font-medium text-md text-second">Ketua = Yulistyo Darma </h2>
-                    <h3 class="font-medium text-md text-second">Wakil = Rayya Rizqi</h3>
-                    <h3 class="font-medium text-md text-second">Sekretaris 1 = Tara </h3>
-                    <h3 class="font-medium text-md text-second">Sekretaris 2 = Aqela</h3>
-                    <h3 class="font-medium text-md text-second">Bendahara 1 = Yasel</h3>
-                    <h3 class="font-medium text-md text-second">Bendahara 2 = Dinda</h3>
-                    <h3 class="font-medium text-md text-second">Keamanan 1 = Naqib</h3>
-                    <h3 class="font-medium text-md text-second">Keamanan 2 = Athar</h3>
-                    <h3 class="font-medium text-md text-second">Developer = Naqib</h3>
+                    <h3 class="font-medium text-md text-second">Wakil = Rayya Rizqi R.</h3>
+                    <h3 class="font-medium text-md text-second">Sekretaris 1 = Tara Ramaisya </h3>
+                    <h3 class="font-medium text-md text-second">Sekretaris 2 = Aqela Zahra Okdina</h3>
+                    <h3 class="font-medium text-md text-second">Bendahara 1 = Yaselya Arafah</h3>
+                    <h3 class="font-medium text-md text-second">Bendahara 2 = Dinda Yasira Azalia</h3>
+                    <h3 class="font-medium text-md text-second">Keamanan 1 = Naqib Muhammad Usman</h3>
+                    <h3 class="font-medium text-md text-second">Keamanan 2 = Muhammad Athar</h3>
+                    <h3 class="font-medium text-md text-second">Developer = Naqib Muhammad Usman</h3>
 
                     </p>
                 </div>
