--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </li>
                             <li class="group">
                                 <a href="#cerita"
-                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">dev</a>
+                                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white">Dev</a>
                             </li>
                             <li class="group">
                                 <a href="#Blog"
@@ -57,7 +57,7 @@
                             </li>
                             <li class="flex items-center pl-8">
                                 <div class="flex">
-                                    <span class="mr-2 text-sm text-slate-500">light</span>
+                                    <span class="mr-2 text-sm text-slate-500">Light</span>
                                     <input type="checkbox" class="hidden" id="dark-toggle" />
                                     <label for="dark-toggle">
                                         <div
@@ -67,7 +67,7 @@
                                             </div>
                                         </div>
                                     </label>
-                                    <span class="mr-2 text-sm text-slate-500">Lime</span>
+                                    <span class="mr-2 text-sm text-slate-500">Dark</span>
                                 </div>
                             </li>
                         </ul>
@@ -80,7 +80,7 @@
     <!-- Header End -->
 
     <!-- Hero Section Start -->
-    <section id="home" class="pt-36 dark:bg-pr">
+    <section id="home" class="pt-36 dark:bg-dark">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2">
@@ -102,8 +102,15 @@
                 </div>
                 <div class="w-full self-end px-4 lg:w-1/2">
                     <div class="relative mt-10">
-                        <img width="330x330" src="dist/img/WhatsApp Image 2023-07-25 at 13.01.03 (2).jpeg" alt="naqib"
-                            class="max-w-full mx-auto">
+                        <img width="330x330" src="dist/img/hehe.png" alt="naqib"
+                            class=" relative z-10 max-w-full mx-auto">
+                        <span id="" class="absolute -bottom-20 left-1/2 -translate-x-1/2">
+                            <svg width="400" height="200" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="#84cc16"
+                                    d="M48.9,-41.1C62.9,-21.5,73.4,-1.2,68.3,13.3C63.2,27.9,42.5,36.6,21.5,48C0.5,59.3,-20.8,73.4,-36.4,68.5C-51.9,63.7,-61.8,40,-65.4,17C-69,-6,-66.2,-28.3,-54.3,-47.5C-42.4,-66.7,-21.2,-82.6,-1.9,-81.2C17.5,-79.7,35,-60.7,48.9,-41.1Z"
+                                    transform="translate(100 100) scale(1.2)" />
+                            </svg>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -112,7 +119,7 @@
     <!-- Hero Section End -->
 
     <!-- About Section start -->
-    <section id="about" class="pt-36 pb-32 dark:bg-pr">
+    <section id="about" class="pt-36 pb-32 dark:bg-dark">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
@@ -146,22 +153,22 @@
     <!-- About section End -->
 
     <!-- Client Section Start -->
-    <section id="cerita" class="pt-36 pb-32 bg-slate-700 dark:bg-lime-800">
+    <section id="cerita" class="pt-36 pb-32 bg-slate-700 dark:bg-slate-800">
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">Perangkat kelas </h4>
-                    <h2 class="font-bold text-dark text-3xl mb-4">Terdiri dari</h2>
-                    <p class="font-medium text-md text-second"> Wali kelas = Zikra Warni
-                    <h2 class="font-medium text-md text-second">Ketua = Yulistyo Darma </h2>
-                    <h3 class="font-medium text-md text-second">Wakil = Rayya Rizqi R.</h3>
-                    <h3 class="font-medium text-md text-second">Sekretaris 1 = Tara Ramaisya </h3>
-                    <h3 class="font-medium text-md text-second">Sekretaris 2 = Aqela Zahra Okdina</h3>
-                    <h3 class="font-medium text-md text-second">Bendahara 1 = Yaselya Arafah</h3>
-                    <h3 class="font-medium text-md text-second">Bendahara 2 = Dinda Yasira Azalia</h3>
-                    <h3 class="font-medium text-md text-second">Keamanan 1 = Naqib Muhammad Usman</h3>
-                    <h3 class="font-medium text-md text-second">Keamanan 2 = Muhammad Athar</h3>
-                    <h3 class="font-medium text-md text-second">Developer = Naqib Muhammad Usman</h3>
+                    <h2 class="font-bold text-dark text-3xl mb-4 dark:text-slate-500">Terdiri dari</h2>
+                    <p class="font-medium text-md text-second dark:text-white"> Wali kelas = Zikra Warni
+                    <h2 class="font-medium text-md text-second dark:text-white">Ketua = Yulistyo Darma </h2>
+                    <h3 class="font-medium text-md text-second dark:text-white">Wakil = Rayya Rizqi R.</h3>
+                    <h3 class="font-medium text-md text-second dark:text-white">Sekretaris 1 = Tara Ramaisya </h3>
+                    <h3 class="font-medium text-md text-second dark:text-white">Sekretaris 2 = Aqela Zahra Okdina</h3>
+                    <h3 class="font-medium text-md text-second dark:text-white">Bendahara 1 = Yaselya Arafah</h3>
+                    <h3 class="font-medium text-md text-second dark:text-white">Bendahara 2 = Dinda Yasira Azalia</h3>
+                    <h3 class="font-medium text-md text-second dark:text-white">Keamanan 1 = Naqib Muhammad Usman</h3>
+                    <h3 class="font-medium text-md text-second dark:text-white">Keamanan 2 = Muhammad Athar</h3>
+                    <h3 class="font-medium text-md text-second dark:text-white">Developer = Naqib Muhammad Usman</h3>
 
                     </p>
                 </div>
@@ -171,28 +178,31 @@
     <!-- Client Section End -->
 
     <!-- Blog Section Start -->
-    <section id="Blog" class="pt-36 pb32 bg-slate-100 dark:bg-lime-700">
+    <section id="Blog" class="pt-36 pb32 bg-slate-800 dark:bg-slate-700">
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2"> Blog</h4>
                     <h2 class=" font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl  dark:text-white">Berita
                         Terkini</h2>
-                    <p class=" font-medium text-md text-second md:text-lg  dark:text-white">Berita ini disampaikan kalau
+                    <p class=" font-medium text-md text-slate-400 md:text-lg dark:text-white">Berita ini disampaikan
+                        kalau
                         memiliki berita terkini dan pending 2-3 hari</p>
                 </div>
             </div>
 
             <div class="flex flex-wrap">
                 <div class="w-full px-4 lg:w-1/3 xl:w-1/3">
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
+                    <div
+                        class="bg-slate-800 rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-700 dark:shadow-slate-500">
                         <img class="w-full" src="dist/img/TYO.png" alt="Berita Professor">
                         <div class="py-8 px-6">
                             <h3
-                                class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate  dark:text-white">
-                                Ulang tahun Yulistyo Darma</h3>
-                            <p class="font-medium text-base text-second mb-3  dark:text-white">Dalam rangka ulang tahun
-                                Yulityo Darma</p>
+                                class="block mb-3 font-semibold text-xl text-slate-300 hover:text-primary dark:hover:text-primary  truncate  dark:text-white">
+                                <a href="https://www.instagram.com/callwe8.1/"> Ulang tahun Yulistyo Darma</a>
+                            </h3>
+                            <p class="font-medium text-base text-slate-400 mb-3  dark:text-white">Dalam rangka ulang
+                                tahun Yulityo Darma</p>
                             <a href="https://www.instagram.com/callwe8.1/"
                                 class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca
                                 Selangkapnya</a>
@@ -205,7 +215,7 @@
     <!-- Blog Section End -->
 
     <!-- Contact Section Start -->
-    <section id="contact" class="pt-36 pb-32 dark:bg-pr">
+    <section id="contact" class="pt-36 pb-32 dark:bg-dark">
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
@@ -245,10 +255,10 @@
     <!-- Contact Section End -->
 
     <!-- Footer start -->
-    <footer class="bg-dark pt-24 pb-12 dark:bg-lime-800">
+    <footer class="bg-dark pt-24 pb-12 dark:bg-slate-600">
         <div class="container">
             <div class="flex flex-wrap">
-                <div class="w-full px-4 mb-12 text-slate-300 dark:bg-lime-800">
+                <div class="w-full px-4 mb-12 text-slate-300">
                     <h2 class="text-white font-bold text-4xl mb-5"> Class 8.1 </h2>
                     <h3 class="font-bold text-2xl mb-2"><a href="#contact"> Hubungi</a></h3>
                     <p>©naqibmuhammad</p>
