--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="widht=device-width, initial-scale=1.0" />
     <title>Port is diasable</title>
     <link href="dist/output.css" rel="stylesheet" />
-    <a href="http://kelasweb81.rf.gd/ " >sorry the link is here</a>
+    <h1 class="text-bold text-blue"" >sorry the link is here = <a href="http://kelasweb81.rf.gd/" class="text-blue">http://kelasweb81.rf.gd/</a></h1>
 </body>
 
 </html>
